--- a/pom.xml
+++ b/pom.xml
@@ -151,11 +151,8 @@
 			<version>1.2</version>
 		</dependency>
 		<!-- DB -->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.25</version>
-		</dependency>
+		<!-- <dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> 
+			<version>5.1.25</version> </dependency> -->
 		<!-- Utilities -->
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -216,11 +213,6 @@
 						<groupId>org.slf4j</groupId>
 						<artifactId>slf4j-log4j12</artifactId>
 						<version>1.7.1</version>
-					</dependency>
-					<dependency>
-						<groupId>postgresql</groupId>
-						<artifactId>postgresql</artifactId>
-						<version>9.1-901-1.jdbc4</version>
 					</dependency>
 					<dependency>
 						<groupId>mysql</groupId>
